--- a/AesPasswordSystem/ArunaObfuscationSystem.csproj
+++ b/AesPasswordSystem/ArunaObfuscationSystem.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AesPasswordAndSolition.cs" />
+    <Compile Include="ArunaObfuscation.cs" />
     <Compile Include="Base64Password.cs" />
     <Compile Include="Base64Solution.cs" />
     <Compile Include="Form1.cs">
